@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        Inject Develop Needs/Suggests/Recommends for @KENTNL
 
 0.01017119 2010-11-02 16:50:49 Pacific/Auckland
         Replace AutoPreReq with AutoPreReqs
